numerous changes, polynomial and python intro work

--- a/lesson1.tex
+++ b/lesson1.tex
@@ -564,13 +564,14 @@ Man dividiert durch den $log_a(b)$:
 
 $$ log_b(x) = \frac{log_a(x)}{log_a(b)}$$
 
+\example{\textbf{Beispiel} \\
 
-Beispiel:
-
-Gegeben den natürlichen Logarithmus einer Messung $x$ benötigt man den 2er Logarithmus.
-$$log_2(x) = \frac{ln(x)}{ln(2)} \approx 2.32$$\todo{what is this}
-
-
+Gegeben den natürlichen Logarithmus einer Messung $x$ benötigt man den 2er Logarithmus. Der natuerliche Logaritmus der messgroesse $x$ ist ca. $1.61$. 
+$$log_2(x) = \frac{ln(x)}{ln(2)} $$
+Also:
+$$log_2(x) = \frac{1.61}{ln(2)} \approx 2.32$$
+In diesem beispiel war $x=5$ und wir koennen überprüfen dass $log_2(5) \approx 2.32$.
+}
 \subsubsection {Dezibel \& $dB_{FS}$}
 Speziell wichtig in der (Audio-) Signalverarbeitung: $dB$ (Dezibel, ein Zehntel \emph{Bel}). 
 \important{
