--- a/lesson5.tex
+++ b/lesson5.tex
@@ -1,4 +1,4 @@
 %!TEX root = main.tex
 \chapter{Diskrete Mathematik \& Reihen}
 
-Taylor Reihe, Fourier Reihe, z transform, faltung
+Taylor Reihe, Fourier Reihe, z transform, faltung, newton-raphson
