--- a/lesson2.tex
+++ b/lesson2.tex
@@ -131,7 +131,7 @@ cos(x) = cos(-x)
 
 \begin{figure}[H]
 	\centering
-	\input{python/exp_versions.pgf}
+	\input{python/plots/exp_versions.pgf}
 	\caption{Die exponentialfunktion mit verschiedenen multiplikatoren im Exponenten.}
 	\label{fig:expVersions}
 \end{figure}
@@ -142,7 +142,7 @@ cos(x) = cos(-x)
 
 \begin{figure}[H]
 	\centering
-	\input{python/sincAsSum.pgf}
+	\input{python/plots/sincAsSum.pgf}
 	\caption{Die sinc Funktion angenähert durch eine Summe von Kosiunus Funktionen.}
 	\label{fig:sincAsSum}
 \end{figure}
