--- a/solutions.tex
+++ b/solutions.tex
@@ -80,7 +80,7 @@ Was eine falsche Aussage für alle $x \in \mathbb{R}$ ist!
 
 \begin{figure}[h]
     \centering
-    \input{python/loes_abs_vars.pgf}
+    \input{python/plots/loes_abs_vars.pgf}
     \caption{Lösung, Variation der Parameter.}
     \label{fig:Loes_abs_var}
 \end{figure}
