--- a/00_vorbemerkungen.tex
+++ b/00_vorbemerkungen.tex
@@ -3,7 +3,10 @@
 
 Viele der rein mathematischen Bemerkungen, Aussagen und Beispele sind Abgeleitet aus \cite{merziger2024repetitorium} und \cite{gollmann2017mathematik}. 
 
-\section{Soundbeispiele}
+\section*{Errata}
+Bitte alle Fehler gerne entweder an \texttt{ptrk.lechner@gmail.com} melden oder direkt einen \emph{issue} auf github öffnen oder sehr gerne selbst ändern und einen \emph{pull request} machen.
+
+\section*{Soundbeispiele}
 
 Soundbeispiele sind in der Programmiersprache \texttt{FAUST} erstellt. Durch click auf das Lautsprecher Symbol sollte sich ein Browser öffnen in dem der entsprechende Klang in Echtzeit berechnet wird. Manche der Beispiele bieten Interaktionsmöglichkeit durch diverse Slider etc. Hier ein Beispiel:
 
@@ -20,5 +23,4 @@ Soundbeispiele sind in der Programmiersprache \texttt{FAUST} erstellt. Durch cli
 
 Geneigten LeserInnen sei besonders empfohlen auch auf den 'Diagramm' button zu clicken um ein Blockdiagramm zu sehen dass dem Code/dem jeweiligen Konzept Entspricht.
 
-\section{Python}
-\todo[inline]{Formelsammlung, Griech. Alphabet.}
+
