correct polynomial in lesson 2

--- a/lesson2.tex
+++ b/lesson2.tex
@@ -284,6 +284,7 @@ Hierbei sind \(r_i\) reelle Nullstellen und \(x^2 + px + q\) irreduzible quadrat
 
 
 \section{Rekursive Funktionen}
+\todo{}[TODO!]
 \begin{equation}
 	 \displaystyle \mathrm{fib}(x) = \left\{ \begin{array}{ll} 0, & \mathrm{if} \ x = 0 \\ 1, & \mathrm{if} \ x = 1 \\ \mathrm{fib} \mathopen{}\left( x - 1 \mathclose{}\right) + \mathrm{fib} \mathopen{}\left( x - 2 \mathclose{}\right), & \mathrm{otherwise} \end{array} \right. \label{eq:fib}
 \end{equation}
@@ -342,11 +343,11 @@ In [2]: y = x**3 - 4*x**2 - 7*x + 10
 In [3]: plot(x,y)
 \end{python}
 
-test.
 
-\begin{figure}[tb]
+
+\begin{figure}[h]
 	\centering
-	\input{img/polynom1.pgf}
+	\input{python/plots/polynom1.pgf}
 	\caption{Der Funktiongraph des Polynoms  $p(x) = x^3 - 4x^2 - 7x + 10$.}
 	\label{fig:poly1}
 \end{figure}
