--- a/lesson2.tex
+++ b/lesson2.tex
@@ -284,7 +284,7 @@ Hierbei sind \(r_i\) reelle Nullstellen und \(x^2 + px + q\) irreduzible quadrat
 
 
 \section{Rekursive Funktionen}
-\todo{}[TODO!]
+\todo{TODO. not urgent.}
 \begin{equation}
 	 \displaystyle \mathrm{fib}(x) = \left\{ \begin{array}{ll} 0, & \mathrm{if} \ x = 0 \\ 1, & \mathrm{if} \ x = 1 \\ \mathrm{fib} \mathopen{}\left( x - 1 \mathclose{}\right) + \mathrm{fib} \mathopen{}\left( x - 2 \mathclose{}\right), & \mathrm{otherwise} \end{array} \right. \label{eq:fib}
 \end{equation}
