--- a/lesson1.tex
+++ b/lesson1.tex
@@ -193,7 +193,16 @@ Kurz:
     \item Ungerade Funktion:  $f(-x) = -f(x)$. Punktsymmetrisch zum Ursprung.
 \end{itemize}
 
-\todo{gerade vs ungerade funkt graph}
+    \begin{figure}[H]
+        \centering
+        \input{python/plots/evenUneven.pgf}
+        % \includegraphics[]{}
+        \caption{Gerade funktion $f(x)$ und ungerade Funktion $g(x)$.}
+        \label{fig:evenUneven}
+    \end{figure}
+
+
+
 \todo[]{Gerade vs ungerade -> Verzerrung, faust beispiel auch.}
 
 \important{
