--- a/lesson3.tex
+++ b/lesson3.tex
@@ -4,6 +4,6 @@
 
 Komplexe Zahlen haben äusserst grosse Wichtigkeit in der Beschreibung von Harmonischen Schwingungen und daher natürlich grosse wichtigkeit in der Audio Domäne.  
 
-% \begin{equation}
-% z = a + bi
-% \end{equation}
+\begin{equation}
+z = a + bi
+\end{equation}
