--- a/lesson3.tex
+++ b/lesson3.tex
@@ -7,3 +7,17 @@ Komplexe Zahlen haben äusserst grosse Wichtigkeit in der Beschreibung von Harmo
 \begin{equation}
 z = a + bi
 \end{equation}
+
+
+\begin{equation}
+e^{xi} = cos(x) + isinx()
+\end{equation}
+
+\section{Rechenregeln}
+\begin{equation}
+z_1 + z_2 = (a_1 + a_2) + i(b_1 + b_2)
+\end{equation}
+
+\begin{equation}
+z_1 \cdot z_2 = (a_1 + a_2) + i(b_1 + b_2)
+\end{equation}
